--- a/src/main.css
+++ b/src/main.css
@@ -962,6 +962,7 @@ html {
 .log__icon {
     flex: 0 0 auto;
     box-sizing: border-box;
+    display: block;
     width: 48px;
     height: 48px;
     margin-right: 16px;
@@ -989,6 +990,7 @@ html {
 
 .log__info {
     flex: 1 1 0;
+    display: block;
     margin-top: 5px;
     margin-bottom: 5px;
 }
