--- a/src/main.css
+++ b/src/main.css
@@ -70,6 +70,8 @@ body {
     width: 100%;
     min-height: 100vh;
     margin: 0;
+    padding-left: 24px;
+    padding-right: 24px;
 }
 
 .maze body {
