--- a/src/styles/view.css
+++ b/src/styles/view.css
@@ -9,3 +9,27 @@
 .view--active {
     display: block;
 }
+
+.view__button {
+    position: absolute;
+    left: 12px;
+    bottom: 8px;
+    display: flex;
+    width: 48px;
+    height: 48px;
+    margin: 0;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.view__button-icon {
+    margin: auto;
+    width: 24px;
+    height: 24px;
+    color: var(--color-text-alt);
+}
+
+.view__button:hover > .view__button-icon {
+    color: var(--color-text);
+}
