--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -40,6 +40,7 @@
 
 .fleeca .button--primary {
     background-color: var(--color-fleeca);
+    color: #fff;
 }
 
 .button--primary:focus-visible {
@@ -55,7 +56,7 @@
 }
 
 .button--primary > .button__icon {
-    color: #ffffff;
+    color: #fff;
 }
 
 /*------------------------------------*\
